--- a/hmtlfiles/index.html
+++ b/hmtlfiles/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="../../reset.css.css">
     <link rel="stylesheet" href="C:\Users\jomai\codingbootcamp\week_2_hw\cssfiles\index.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <meta charset="UTF-8">
@@ -8,9 +9,12 @@
 </head>
 <body>
 <div class="container">
+  <div class="head">
     <div class="row">
         <div class="col-md-3">
+          <div class ="name">
             <h2>Jomain Rouser</h2>
+          </div>
         </div>
         <div class="col-md-9">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -27,17 +31,34 @@
           </nav>
         </div>
     </div>
+  </div>
+    <hr class ='hrr'>
+    <br>
 
     <div class="row">
-
-    <div class="card" style="width: 18rem;">
+      <div class="col-md-7">
+           <div class="card" style="width: 100%;">
             <div class="card-body">
-              <h5 class="card-title">About Me</h5><br><hr>
+              <h5 class="card-title5">About Me</h5><hr>
               <img src="../../jomain_Portfolio/assets/images/jomain picture (2).jpg" width="150px" height="150px">
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p><br>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p><br>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
             </div>
           </div>
+      </div>
     </div>
+
+  <div class="card1">
+    <div class="row">
+        <div class="col-md-12">
+          <h5 class="card-header1">i</h5>
+          <div class="card-body1">
+          <h5 class="card-title">i</h5>
+          <p class="card-text">i</p>
+        </div>
+    </div>
+  </div>
 </div>
 
     
