--- a/hmtlfiles/contact.html
+++ b/hmtlfiles/contact.html
@@ -18,14 +18,14 @@
         </div>
         <div class="col-md-9">
     <nav class="navbar navbar-expand-lg navbar-light">
-            <a class="navbar-brand" href="#">About</a>
+            <a class="nav-link" href="../hmtlfiles/index.html">About</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
               <div class="navbar-nav">
-                <a class="nav-item nav-link active" href="#">Portfolio <span class="sr-only">(current)</span></a>
-                <a class="nav-item nav-link" href="#">Features</a>
+                <a class="nav-item nav-link" href="../hmtlfiles/contact.html">Contact <span class="sr-only">(current)</span></a>
+                <a class="nav-item nav-link" href="../hmtlfiles/portfolio.html">Portfolio</a>
               </div>
             </div>
           </nav>
@@ -60,7 +60,7 @@
                   </div>
                   <textarea type="text" rows="8" cols="300px"> </textarea>
                   </div>
-                <button type="button" class="button btn btn-lg">Submit</button>
+                <button type="button" class="btn btn-info">Submit</button>
               </div>
             </div>
                 
