--- a/hmtlfiles/index.html
+++ b/hmtlfiles/index.html
@@ -18,14 +18,14 @@
         </div>
         <div class="col-md-9">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="#">About</a>
+            <a class="nav-link" href="../hmtlfiles/index.html">About</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
               <div class="navbar-nav">
-                <a class="nav-item nav-link active" href="#">Portfolio <span class="sr-only">(current)</span></a>
-                <a class="nav-item nav-link" href="#">Features</a>
+                <a class="nav-item nav-link active" href="../hmtlfiles/contact.html">Contact <span class="sr-only">(current)</span></a>
+                <a class="nav-item nav-link" href="../hmtlfiles/portfolio.html">Portfolio</a>
               </div>
             </div>
           </nav>
@@ -51,7 +51,7 @@
 
   <div class="card1">
     <div class="row">
-        <div class="col-md-12">
+        <div class="col-md-10">
           <h5 class="card-header1">i</h5>
           <div class="card-body1">
           <h5 class="card-title">i</h5>
