--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
         </div>
         <div class="col-md-9">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="nav-link" href="/index.html">About</a>
+            <a class="nav-link" href="index.html">About</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
               <div class="navbar-nav">
-                <a class="nav-item nav-link active" href="/contact.html">Contact <span class="sr-only">(current)</span></a>
-                <a class="nav-item nav-link" href="/portfolio.html">Portfolio</a>
+                <a class="nav-item nav-link active" href="contact.html">Contact <span class="sr-only">(current)</span></a>
+                <a class="nav-item nav-link" href="portfolio.html">Portfolio</a>
               </div>
             </div>
           </nav>
@@ -40,7 +40,7 @@
            <div class="card" style="width: 100%;">
             <div class="card-body">
               <h5 class="card-title5">About Me</h5><hr>
-              <img src="../../jomain_Portfolio/assets/images/jomain picture (2).jpg" width="150px" height="150px">
+              <img src="../jomain_Portfolio/assets/images/jomain picture (2).jpg" width="150px" height="150px">
               <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p><br>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p><br>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
